demo: examples in client and server sides

--- a/example.html
+++ b/example.html
@@ -65,6 +65,8 @@
           displayTime: true
         });
 
+        console.log('----------');
+
         log1.debug('message', 1);
         log1.info('message', 2);
         log1.complete('message', 2);
@@ -94,6 +96,20 @@
         log1.danger('message', 19);  // displayed
         log1.error('message', 20);  // displayed
         log1.fatal('message', 21);  // displayed
+
+        console.log('----------');
+
+        log1.setLevel(Log.LEVEL.DEBUG);
+
+        log1.debug('message', 22);  // displayed
+        log1.info('message', 23);  // displayed
+        log1.complete('message', 24);  // displayed
+        log1.warn('message', 25);  // displayed
+        log1.danger('message', 26);  // displayed
+        log1.error('message', 27);  // displayed
+        log1.fatal('message', 28);  // displayed
+
+        console.log('----------');
 
       })();
     </script>
